内存管理——MRC、copy二刷

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -168,10 +168,16 @@ void objc_setAssociatedObject(id object, const void* key, id value, objc_Associa
 
 #### 属性关键字
 * 读写属性：readwrite: 默认，可读可写；readOnly: 只读；
+
 * 原子属性：atomic: 原子性; nonatomic: 非原子性（原子性可以理解为setter和getter方法内部是线程同步的）。atomic并不能完全包证使用属性的过程是线程安全的，  atomic能够保证读写方法的原子性，比如：如果是一个可变数组的话，只能保证数组的读写方法的原子性，但是对数组里元素的操作是没法保证原子性的。其次 atomic非常耗性能。一般我们保证可变数组的线程安全的最直接方式是使用信号锁，如果要实现多读单写则要使用dispatch_barrier_async。
+
 * assign & weak：assign可以修饰基础数据类型和对象类型，但是修饰的对象类型，在对象释放后不会自动置为nil，容易导致垂悬指针错误；weak只能用于修饰对象类型，weak指针指向的对象释放后，会在dealloc内部对weak指针置为nil操作。所以一般使用是用weak修饰对象类型，用assign修饰基础数据类型。其次他们修饰对象类型的话也都不会增加所指对象的引用计数。
+
 * copy：copy一般用于修饰不可变集合类型和block；通常的一个面试题是：为什么使用copy修饰NSString而不是strong。原因就是使用strong的话，如果用一个NSMutableString的类型b给NSString类型a赋值，那么a最终也就变成了NSMutableString类型。对b的修改也会导致a的变化，这样就违背了a是不可变类型的初衷，出现安全性问题。而使用copy，底层是深拷贝，会拷贝一份新的内存，两者的修改不会相互影响。
-* 浅拷贝 & 深拷贝：浅拷贝是指拷贝一个指针，与被拷贝对象是同一个内存区域，也就是会增加被拷贝对象的引用计数；深拷贝是将内存区域重新生成一份，然后用指针指向它，不会增加被拷贝对象的引用计数。(如何记忆？原则上，对拷贝完成之后的对象进行操作，不会影响原有对象则为深拷贝，否则为浅拷贝。比如，对不可变对象进行copy，结果是不可变对象，也就是拷贝前后的对象其实是可以使用同一块内存区域的；对可变对象进行copy，结果是不可变对象，那对拷贝之后的对象进行操作要不影响原有对象，只能拷贝另一份内存区域，所以是深拷贝；同样的，无论对可变还是不可变对象进行mutableCopy，最好都生成可变对象，对拷贝之后的对象进行操作，想要不影响原有对象，则必须拷贝另一份内存区域，所以是深拷贝)
+
+  MJ版本：拷贝的目的就是产生一个副本对象，副本对象跟源对象互不影响。修改源对象不会影响副本对象，修改副本对象，不会影响源对象。 使用copy—产生不可变副本，使用mutableCopy—产生可变副本。
+
+* 浅拷贝 & 深拷贝：浅拷贝是指拷贝一个指针，与被拷贝对象是同一个内存区域，也就是会增加被拷贝对象的引用计数；深拷贝是将内存区域重新生成一份，然后用指针指向它，不会增加被拷贝对象的引用计数。(如何记忆？原则上，对拷贝完成之后的对象进行操作，不会影响原有对象则为深拷贝，否则为浅拷贝。比如，对不可变对象进行copy，结果是不可变对象，也就是拷贝前后的对象其实是可以使用同一块内存区域的，所以是浅拷贝；对可变对象进行copy，结果是不可变对象，那对拷贝之后的对象进行操作要不影响原有对象，只能拷贝另一份内存区域，所以是深拷贝；同样的，无论对可变还是不可变对象进行mutableCopy，最好都生成可变对象，对拷贝之后的对象进行操作，想要不影响原有对象，则必须拷贝另一份内存区域，所以都是深拷贝)
 
 #### 关键名词解析
 * **isa混写**：isa指针指向当前对象所对应的类，也可以说有isa指针的结构体就是一个对象，比如block和runloop。isa混写技术是指在运行时改变isa的指向，实现动态修改对象的类。具体是实现方案是通过给NSObject添加一个分类，分类里调用C函数objc_setClass来修过isa指向
@@ -962,59 +968,69 @@ _ link = [CADisplayLink displayLinkWithTarget:[FCFProxy proxyWithTarget:self] se
 
 #### 内存管理方案
 * **TaggedPointer**：对于一些小对象，比如NSNumber、NSDate、NSString。它有可能采用的是TaggedPointer的管理方式进行内存管理的，它是对象指针实际上不指向任何内存地址，而是直接将值存储在了指针本身里，该指针就被拆分成两部分，一部分是直接保存数据，另一部分是作为特殊标记。
-	* 注意1：这里说的小对象，指的是对象的值很小，正好可以使用指针位数放下。如果超过了指针的位数，则使用原来的存储方案。比如NSNumbber, 当数值很小时，采用的是TaggedPointer的方式，如果数值非常大，则就又会是普通的存储方式；
-	* 注意2：TaggedPointer技术不仅仅是内存方面的优化，使用上也会优化。比如对使用了TaggedPointer技术的对象发送消息时，objc_msgSend内部实际上也做了优化，它不会去走消息转发的流程，而是直接从TaggedPointer内取出它的值。比如：NSNumber *number = @10; [number intValue];
-	* 面试题1：下面代码会发生什么？为什么？
-		```
-		@property (nonatomic, copy) NSString * name;
-		
-		- (void)method1 {
+  * 注意1：这里说的小对象，指的是对象的值很小，正好可以使用指针位数放下。如果超过了指针的位数，则使用原来的存储方案。比如NSNumbber, 当数值很小时，采用的是TaggedPointer的方式，如果数值非常大，则就又会是普通的存储方式；
+  * 注意2：TaggedPointer技术不仅仅是内存方面的优化，使用上也会优化。比如对使用了TaggedPointer技术的对象发送消息时，objc_msgSend内部实际上也做了优化，它不会去走消息转发的流程，而是直接从TaggedPointer内取出它的值。比如：NSNumber *number = @10; [number intValue];
+  * 面试题1：下面代码会发生什么？为什么？
+  	```
+  	@property (nonatomic, copy) NSString * name;
+  	
+  	- (void)method1 {
             dispatch_queue_t queue = dispatch_get_global_queue(0,0);
             for (int i = 0; i < 10000; i++) {
                 dispatch_async(queue, ^{
                     self.name = [NSString stringWithFormat@"abcdefghijklmn"];
                 });
             }
-		}
-		
-		- (void)method2 {
+  	}
+  	
+  	- (void)method2 {
             dispatch_queue_t queue = dispatch_get_global_queue(0,0);
             for (int i = 0; i < 10000; i++) {
                 dispatch_async(queue, ^{
                     self.name = [NSString stringWithFormat@"abc"];
                 });
             }
-		}
-		
-		//答案：method1会在for循环里崩溃。method2不会。
-		method1为什么会崩溃？首先字符串数值比较大，所以它不是TaggedPointer类型，而是直接的对象类型。给name赋值，实际上调用的是setter方法。setter方法底层的实现是：
-		-(void)setter:(NSString)name {
+  	}
+  	
+  	//答案：method1会在for循环里崩溃。method2不会。
+  	method1为什么会崩溃？首先字符串数值比较大，所以它不是TaggedPointer类型，而是直接的对象类型。给name赋值，实际上调用的是setter方法。setter方法底层的实现是：
+  	-(void)setter:(NSString)name {
             if (_name != name) {
                 [_name release]; //释放老值
                 _name = [name copy]; //赋值新值
             }
-		}
-		在setter方法内部，多个线程同时访问，_name就有可能被重复release，从而导致崩溃。
-		解决方案：就是给self.name = [NSString stringWithFormat@"abcdefghijklmn"];前后加解锁。
-		method2不会产生崩溃。因为字符串数值比较小，它实际是一个TaggedPointer，所以给name赋值，不会调用setter方法，从而不会出现上面的问题。
-		所以这道题的本质就是TaggedPointer的区别。
-		```
+  	}
+  	在setter方法内部，多个线程同时访问，_name就有可能被重复release，从而导致崩溃。
+  	解决方案：就是给self.name = [NSString stringWithFormat@"abcdefghijklmn"];前后加解锁。
+  	method2不会产生崩溃。因为字符串数值比较小，它实际是一个TaggedPointer，所以给name赋值，不会调用setter方法，从而不会出现上面的问题。
+  	所以这道题的本质就是TaggedPointer的区别。
+  	```
 
 * **NONPOINTER_ISA**：在runtime章节中有提到isa是指向当前对象所属类的一个指针。一个结构体含有isa指针，那可以说明它是一个对象类型。实际上isa是对应一个isa_t的联合体，在64位架构下，它是由64个0和1的比特位组成。而实际上存储该对象所属类对象地址只需要用到大概33位，所以剩下的位数就可以用来存储其他的信息。
-	我们来看看NONPOINTER_ISA的基础数据结构：
-	* 第1位：是一个标志位，表示了它是否是一个非指针类型的isa，如果是0则说明它只是一个指针，内部的数据都是对应class的地址，如果是1则表示它是一个非指针类型的isa，内部数据只有部分用于存储class的地址；
-	* 第2位：表示当前对象是否有管理对象——Association；
-	* 第3位：表示是否使用ARC进行内存管理；
-	* 第4~33位：表示当前对象所指向的类对象的地址；
-	* 第34~40位：magic数据，表示是否完成初始化；
-	* 第41位：表示是否有弱引用指针；
-	* 第42位：是否正在执行deallocating操作；
-	* 第43位：表示当前对象是否外挂散列表；
-	* 剩余的位数：都是表示extra_rc，但是注意，存储的是**真实的引用计数值-1**。
-* **散列表：SideTables**：也就是在非指针型的isa的引用计数值太大时，则会使用到散列表来对内存进行管理。散列表中包含了引用计数表和弱引用表。
+  我们来看看NONPOINTER_ISA的基础数据结构：
+  * 第1位：是一个标志位，表示了它是否是一个非指针类型的isa，如果是0则说明它只是一个指针，内部的数据都是对应class的地址，如果是1则表示它是一个非指针类型的isa，内部数据只有部分用于存储class的地址；
+  * 第2位：表示当前对象是否有管理对象——Association；
+  * 第3位：表示是否使用ARC进行内存管理；
+  * 第4~33位：表示当前对象所指向的类对象的地址；
+  * 第34~40位：magic数据，表示是否完成初始化；
+  * 第41位：表示是否有弱引用指针；
+  * 第42位：是否正在执行deallocating操作；
+  * 第43位：表示当前对象是否外挂散列表；
+  * 剩余的位数：剩余19位都是表示extra_rc，但是注意，存储的是**真实的引用计数值-1**。
+
+* **散列表：SideTables**：也就是在非指针型的isa的引用计数值太大时，则会使用到散列表来对内存进行管理。
+  
 #### 散列表详解
 ##### 散列表基础数据结构：
-在64位架构下，通常会有64个散列表组成一个全局的SideTables，它类似AssociationMap。里面每个SideTable包含一个自旋锁、一个引用计数表、一个弱引用表。当需要对引用计数进行操作的时候，则通过对象指针作为key值，经过哈希查找定位到对应的散列表，然后进行操作。
+在64位架构下，通常会有64个散列表组成一个全局的SideTables（也是散列表），它类似AssociationMap。里面每个SideTable包含一个自旋锁、一个引用计数表、一个弱引用表。当需要对引用计数进行操作的时候，则通过对象指针作为key值，经过哈希查找定位到对应的散列表，然后进行操作。
+```
+  // 这个散列表是SideTables里的一个元素。
+  struct SideTable {
+      spinlock_t slock;			// 自旋锁
+      RefcountMap refcnts;		// 引用计数表(散列表)
+      weak_table_t weak_table;	// 弱引用表(散列表)
+  }
+```
 * **自旋锁Spinlock_t**： 它是一个“忙等”的锁，也就是说在当前资源被某个线程占用的时候，其他的线程会一直试探该锁有没有解锁，而像信号量，则是会在获取不到资源的时候进行休眠，等资源被释放后，则再被唤醒。它使用与轻量访问。这里之所以要有多个sidetable组成一个sidetables，也是为了提高访问效率。因为每个引用计数的操作都是需要加锁处理，分割成多个表，就可以并行操作。实际上这就是**分离锁**的技术方案；；
 * **引用计数表**：引用计数表也是一个hash表，它是通过hash函数插入和获取引用计数，提高访问效率。hash表里的每个元素是一个unsigned long类型的size_t。它也是由64位比特位组成，其中第一位是表示是否有弱引用，第二位表示是否正在执行dealloc函数。剩下的则也是表示**真实的引用计数值-1**。所以取引用计数的时候需要进行向右偏移2位的操作；
 * **弱引用表**：实际上也是一个hash表，它存储的是一个weak_entry_t的结构体数组，它里面的每个对象存储的都是一个弱引用指针。作用就是在对象执行dealloc操作的时候将所有指向该对象的weak指针的值设为nil，避免垂悬指针。
