内存管理——autorelease完结

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -1091,18 +1091,68 @@ q2：当一个对象被释放之后，weak变量是怎么被清理的。
 
 
 #### AutoreleasePool
-AutoreleasePool是用于对延迟释放的对象的内存管理。
-* 首先来看一下AutoreleasePool的内部结构:
-  AutoreleasePool是一个以AutoreleasePoolPage为节点的双向链表，同时它含有一个pthread的成员。AutoreleasePoolPage是一个栈结构，它里面有一个next指针。在ARC中的实现流程是：当@autoreleasepool{}中，{开始的位置会被编译成AutoreleasePoolPagePush(),它会在当前page栈中插入一个标志位，并且返回。在执行{}之间的代码时，会把当前生成的对象依从插入到next指针的位置，next指针在栈中依从往栈顶走，当栈满了的时候，就会生成下一个page，在}结束前，会把标志位做为入参执行AutoreleasePoolPagePop(xx),这个时候就会给标志位与next指针之间的对象依次发送release消息，然后复位next指针位置。
+添加了autorelease方法的对象会被添加进AutoReleasePool中。AutoreleasePool是用于对延迟释放的对象的内存管理。
+
+```
+// AutoReleasePool结构体
+struct _AtAutoreleasePool {
+    __AtAutoreleasePool() { // 构造函数
+        atautoreleasepoolobj = objc_autoreleasePoolPush();
+    }
+    
+    -__AtAutoreleasePool() { // 析构函数
+        objc_autoreleasePoolPop(atautoreleasepoolobj);
+    }
+    
+    void *atautoreleasepoolobj;
+}
+
+// AutoreleasePoolPage 结构体
+class AutoreleasePoolPage {
+    magic_t const magic;
+    id *next;
+    pthread_t const thread;
+    AutoreleasePoolPage *parent;
+    AutoreleasePoolPage *child;
+    uint32_t const depth;
+    uint32_t hiwat;
+}
+
+AutoreleasePoolPage对象占用4096个字节，除了存放基础的内部成员变量，剩下的空间都用来存放autorelease对象的地址。
+从AutoreleasePoolPage的结构可以看出AutoreleasePoolPage是通过双向链表的形式连接在一起的。
+```
+
+
+
+* 首先来看一下AutoreleasePoolPage的内部结构:
+  AutoreleasePoolPage是以双向链表的形式连接在一起的，同时每一个AutoreleasePoolPage含有一个pthread的成员。AutoreleasePoolPage是还有一个next指针。在ARC中的实现流程是：当@autoreleasepool{}中，{开始的位置会被编译成AutoreleasePoolPush()，它内部调用了AutoreleasePoolPagePush(),它会在当前page中插入一个标志位，并且返回。在执行{}之间的代码时，会把当前生成的**Autorelease对象**插入到next指针的位置，然后next指针往后移（类似入栈的一个操作，入栈后栈顶指针进行移动）。如果page满了的话，就会生成下一个page。在}结束前，会把push返回的标志位做为AutoreleasePoolPop的入参，然后底层调用AutoreleasePoolPagePop(xx),这个时候就会给标志位与next指针之间的Autorelease对象依次发送release消息同时执行pop操作（类似出栈操作），然后复位next指针位置。
+
+  如果Autorelease对象过多的话，可能就会有多个page用于存放对象。当前正在使用的page称作hot page，不在使用的page称作cold page。
 
 * 注意：
   因为AutoreleasePool的数据结构实际是以标志位插入的方式来实现的，所以无论有多少层嵌套，都只是对标志位进行操作而已。
 
+* Autorelease对象在什么时机会被执行release？
+
+  1、如果Autorelease对象直接在@autoreleasepool{}包裹中。则autoreleasePoolPage执行pop的时候，对autorelease对象执行一次release操作
+
+  ```
+  @autoreleasepool {
+      Person *person = [[[Person alloc] init] autorelease];
+  } // 这里会对person执行release操作
+  ```
+
+  2、没有显示放在@autoreleasepool{}里的Autorelease对象执行release则与runloop有关。
+
 * AutoreleasePool与runloop的关系及内存管理：
-  AutoreleasePool与线程是一一对应的关系，那么它与runloop自然也是一一对应的关系。在**主线程的runloop**发出CFRunLoopEntry通知的时候，会执行一个AutoreleasePagePush()函数，创建一个AutoreleasePool，然后runloop的事件循环中（因为runloop是在KCFRunLoopBeforObserver后才开启事件循环的），如果监听到了kCFRunLoopBeforeWaiting通知，会先执行AutoreleasePagePop()然后再执行AutoreleasePagePush()，相当于释放旧的AutoreleasePool，创建新的AutoreleasePool。然后在runloop退出前，即接收到KCFRunLoopExit通知时，再执行AutoreleasePagePop()释放掉AutoreleasePool。所以从这里可以看出，在Runloop的每一次事件循环期间，也是会对标志位直接的每一个对象发送一次release的，以及时释放掉无用的对象。所以主线程的几乎所有的对象都被AutoreleasePool环绕。
+  AutoreleasePool与线程是一一对应的关系，那么它与runloop自然也是一一对应的关系。在**主线程的runloop**发出**CFRunLoopEntry**通知的时候，会执行一个autoreleasePoolPush()函数，创建一个AutoreleasePoolPush()。其次在runloop的事件循环中，如果监听到了kCFRunLoopBeforeWaiting通知，会先执行autoreleasePoolPop()然后再执行autoreleasePoolPush()函数，相当于释放旧的AutoreleasePool，创建新的AutoreleasePool。然后在runloop退出前，即接收到KCFRunLoopExit通知时，再执行AutoreleasePagePop()释放掉AutoreleasePool。所以从这里可以看出，在Runloop的每一次事件循环期间，也是会对标志位直接的每一个对象发送一次release的，以及时释放掉无用的对象。所以主线程的几乎所有的对象都被AutoreleasePool环绕。
 
 * 什么样的对象会自动加入到AutoreleasePool中？
+
+  Autorelease对象。
+
   虽然说main函数里有@AutoreleasePool，但是并不是说所有对象都会交给Autoreleasepool来处理。
+
   * 使用类方法生成的对象（或者说作为方法的返回值的对象），会被自动注册到Autoreleasepool中。比如：id obj = [NSMutableArray array]; 
   * id指针或者对象指针没有显示指定时会被附加上 __autoreleastring修饰符。比如传参过程中的（NSError **）err 就等同于 <#NSError * _Nullable __autoreleasing * Nullable#>。
 
@@ -1110,10 +1160,10 @@ AutoreleasePool是用于对延迟释放的对象的内存管理。
   在子线程中，如果你创建了Pool的话，产生的Autorelease对象就会交给Pool去管理，如果你没有创建Pool，产生了Autorelease对象，就会调用autoreleaseNoPage方法。在这个方法中，会帮你自动创建一个hotPage(hotPage可以理解为当前正在使用的AutoreleasePoolPage)。然后调用page->add(obj)将对象添加到当前正在使用的AutoreleasePoolPage的栈中，所以这也不会导致内存泄漏。
 
 * main函数的AutoreleasePool有什么作用，可否直接去去掉？
-实际上UIApplicationMain是永远不会返回的，除了系统kill应用，系统会把整个应用占用的内存释放掉。因为UIApplicationMain永远不会返回，所以这里的AutoreleasePool就没有执行pop的机会，所以实际上如果删掉应该也不会有内存泄漏的问题。
+  实际上UIApplicationMain是永远不会返回的，除了系统kill应用，系统会把整个应用占用的内存释放掉。因为UIApplicationMain永远不会返回，所以这里的AutoreleasePool就没有执行pop的机会，所以实际上如果删掉应该也不会有内存泄漏的问题。
 
 * 自动释放池在MRC和ARC中的区别：
-如果函数返回值是对象的话，MRC则需要区分调用者是否拥有这个返回值，如果调用者拥有这个返回值，则调用者就要对其进行释放，如果没有就不需要。比如说：
+  如果函数返回值是对象的话，MRC则需要区分调用者是否拥有这个返回值，如果调用者拥有这个返回值，则调用者就要对其进行释放，如果没有就不需要。比如说：
 ```
 分析：调用者直接拥有返回值。对象初始化时引用计数为1，property是retain的话，赋值的时候，引用计数会加1。 所以即使dealloc的时候，执行[ _ property release]，也会存在内存泄漏。正确的做法是：self.property = [[[NSObject alloc] init] autorelease]; 
 
