性能优化与架构学习2完结

--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -334,3 +334,23 @@ Person和Student对象各占多少空间？
 * 方法里的局部对象，出了方法后会立即释放吗
 * ARC帮我们做了什么
 * weak指针的实现原理
+
+
+
+### 项目优化
+
+* 你项目中怎么优化内存的？？
+* 优化你是从哪几个方面入手的？
+* 列表卡顿的原因可能有哪些？你平时是怎么优化的？
+* 遇到tableView卡顿吗？会造成卡顿的原因大致有哪些？
+
+
+
+### 架构
+
+* MVC、MVVM、MVP的区别，你在项目里具体是怎么实现的
+* 用过哪些设计模式
+* 一般开始做一个项目，你的架构如何思考？
+
+
+
