底层原理 二刷 完结

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -365,6 +365,19 @@ void myMethod(id self, SEL _cmd) {
 
 ### Runloop
 RunLoop是通过系统内部维护的事件循环来对事件和消息进行管理的对象。事件循环可以有效地对消息和事件进行管理：当有消息需要处理时，会将进程从内核态到用户态进行切换，同时唤醒当前线程处理消息；当没有消息需要处理时，会休眠当前线程，将进程从用户态到内核态进行切换，以避免资源占用。所以runloop可以保证进程不退出，可以处理和监听事件，可以定时渲染UI，可以调节CPU的工作。
+
+```
+int retVal = 0;
+do{
+    // 睡眠中等待消息
+    int message = slwwp_and_wait();
+    // 处理消息
+    retval = process_message(message);
+}while (0 == retVal);
+```
+
+
+
 #### runloop基础数据结构：
 CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个commonModes、一个commonModeItems。其中后面3个都是集合类型，里面放着的是CFRunLoopMode类型的元素，CFRunLoopMode的成员主要包含name、source0、source1、obbservers、timers等元素。currentMode和modes里的数据结构都是对应CFRunLoopMode类型，CFRunLoopMode对应5种mode：DefaultMode、UITrackingMode、UIInitializationMode、EventReceiveMode、CommonModes。currentMode是指当前runloop对应的运行mode，每次调用runloop的时候，只能指定一个mode为currentMode。这么做的目的就是为了在某个mode运行下，不会受到其他时间的影响，比如在滚动的trackingmode时，不会受到点击触摸事件的影响。 commonModes对应的是字符串，也就是前面5种mode的名称，它是一种技术解决方案。modeItems对应4种item：Observer、timer、source0、source1。
 
