开始复习图像的显示原理

--- a/读书笔记/iOS自学笔记/专题——网络基础.md
+++ b/读书笔记/iOS自学笔记/专题——网络基础.md
@@ -1,8 +1,8 @@
 #### 语言跨平台原理
 
-*  C/C++：
+* C/C++：
 
-   C/C++文件要实现跨平台，则需要编译成对应平台的可执行文件。比如说要在Windows上运行，需要编译成PE格式文件；要在Mac上运行，需要编译成Mach-O格式文件；要在Linux上运行，需要编译成ELF格式文件。
+  C/C++文件要实现跨平台，则需要编译成对应平台的可执行文件。比如说要在Windows上运行，需要编译成PE格式文件；要在Mac上运行，需要编译成Mach-O格式文件；要在Linux上运行，需要编译成ELF格式文件。
 
   相当于不同平台都得单独编译。
 
@@ -13,6 +13,40 @@
   相当于一次编译，多次运行。
 
 
+### 服务器代码
+Serverlet 
 
+### 计算机之间的通讯基础
+两台计算机之间想要相互通讯，需要知道对方的IP地址。然后如果要发数据到对方计算机，得把数据发送到对方网卡，由网卡将数据传递给上一层，所以还得知道对方的网卡地址，也就是MAC地址。具体的操作是：
+* 将数据通过自己的网卡发送给对方的网卡：
+	* 如果网卡发现数据的目标MAC地址是自己，就会将数据传递给上一层进行处理；
+	* 如果网卡发现数据的目标MAC地址**不是**自己，就会将数据丢弃，不会传递给上一层进行处理；
+* 那如何拿到目标地址的网卡地址呢？ 
+	* ARP广播，在不知道对方MAC地址的情况下，会通过ARP广播，如果发现是自身的IP地址，则就会把MAC地址返回回去。ARP广播会对所有的设备部发送广播。(ARP广播通俗点就是给所有设备发送一条信息，询问：你是否知道这个IP地址的MAC地址是什么吗？)
+#### 计算机连接方式
+* 网线直连：需要用交叉线直连；
+* 同轴电缆：半双工通信，容易冲突；
+* 集线器：半双工通信，容易冲突、不安全；当一台设备让某个Mac地址发送消息时，会对与之相连的所有设备都发送1次
+* 网桥：能够通过自学习得知每个接口那侧的MAC地址（缓存Mac在当前网桥的哪一侧）。从而起到隔绝冲突域的作用；
+* 交换机：相当于更多接口的网桥，全双工通信。（相当于交换机有很多接口，然后每个接口都能记录该接口对应那一端的所有设备的Mac地址。这样就不会像集线器一样给所有的设备发送信息，而不是给所有的连接设备发送信息。当然了第一次广播，肯定也是所有的设备都会发射一次）组件局域网肯定要使用交换机。
+* 路由器：
+	* 网线直连、同轴电缆、集线器、网桥、交换机
+		* 连接的设备必须在同一网段；
+		* 连接的设备处在同一广播域；
+		* 网段：通常我们看到的192.16.1.10、 192.16.1.11、192.16.1.12。192.16.1就可以认为是同一个网段。同一网段就形成了同一广播域，也就是说ARP只会在这一区域发生广播。所以不同网段的设备是没法通过网线直连、同轴电缆、集线器、网桥、交换机这些方式进行通信的。
+	* 路由器就是用于在不同网段中进行通信、转发数据的设备。起到隔绝广播域的作用。
+	```
+	IP地址1s：192.16.1.10、 192.16.1.11、192.16.1.12
+	IP地址2s：192.16.2.10、 192.16.2.11、192.16.2.12
+	
+	IP地址1s中的设备是无法直接与IP地址2s中的设备进行通信的。(不在同一网段的设备无法收到ARP广播，也就是无法拿到MAC地址，也就无法进行通信)
+	IP地址1s中的设备之间可以使用交换机进行通信(这个可以理解为一个网段或广播域，ARP广播可以相互接收到)
+	要想使IP地址1s中的设备与IP地址2s中的设备进行通信，则需要使用路由器。
+	IP地址1s的交换机 ———— 路由器 ———— IP地址2s的交换机
+	```
+	其次路由器也有多个对外接口，这个接口称为**网关**。每个网关与对应的广播域是属于同一网段。这样当路由器的网关接收到一个通信信息时，就能够知道发给哪一个网关的IP地址了。(网关也是有MAC地址的)
 
+所以当代的技术就是：交换机+路由器。
+
+44
 
