完善离屏渲染相关底层理论细节

--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -467,6 +467,8 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
 
   MJ：CADisplayLink和NSTimer底层都是基于runloop来实现的。如果RunLoop的任务过于繁重的话，就可能导致NSTimer不准时。（可以理解为RunLoop每进行一次loop循环，就会查看一下定时器，只有定时器累计时间超过1s才会触发。而RunLoop每次运行一周的任务是不确定的，导致运行时间是不固定的，所以跑完很多圈之后，时间可能并不一定是1s，有可能超过1秒。比如0.2+0.3+0.3+0.5 > 1.0 触发定时器）。
 
+  核心动画：NSTimer被插入到runloop的任务列表里，需要等到runloop执行到处理时间时间才会启动。所以说何时启动定时器并不确定，如果上一个任务需要较长时间执行完成，所以就可能导致延迟时间。CADisplayLink是CoreAnimation提供的类似NSTime的类，它总是在屏幕完成一次更新后启动（而屏幕的更新频率是每秒60次），所以也是每秒60次。我们通常使用CADisplayerLink来测量帧率，**但是FPS并不能够完全真实测量出Core Animation性能**，因为它仅仅测出应用内的帧率，而有的渲染是发生在应用之外的（在渲染服务器进程中处理）。所以FPS可以对某些性能提供参考，但是也会存在不一定准确的情况。
+
   要使定时器准时，则可以使用GCD的定时器，GCD的定时器是直接跟系统内核挂钩的，所以是非常准时的。而且GCD的定时器，不会受runloop的任何影响，且可以在任何线程下使用。其次GCD创建的东西也不需要手动销毁（就像我们创建的队列也不用手动销毁一样）。
 
   ```
