了解部分网络硬件原理

--- a/读书笔记/iOS自学笔记/专题——网络基础.md
+++ b/读书笔记/iOS自学笔记/专题——网络基础.md
@@ -19,10 +19,17 @@ Serverlet
 ### 计算机之间的通讯基础
 两台计算机之间想要相互通讯，需要知道对方的IP地址。然后如果要发数据到对方计算机，得把数据发送到对方网卡，由网卡将数据传递给上一层，所以还得知道对方的网卡地址，也就是MAC地址。具体的操作是：
 * 将数据通过自己的网卡发送给对方的网卡：
-	* 如果网卡发现数据的目标MAC地址是自己，就会将数据传递给上一层进行处理；
-	* 如果网卡发现数据的目标MAC地址**不是**自己，就会将数据丢弃，不会传递给上一层进行处理；
+  * 如果网卡发现数据的目标MAC地址是自己，就会将数据传递给上一层进行处理；
+  * 如果网卡发现数据的目标MAC地址**不是**自己，就会将数据丢弃，不会传递给上一层进行处理；
 * 那如何拿到目标地址的网卡地址呢？ 
-	* ARP广播，在不知道对方MAC地址的情况下，会通过ARP广播，如果发现是自身的IP地址，则就会把MAC地址返回回去。ARP广播会对所有的设备部发送广播。(ARP广播通俗点就是给所有设备发送一条信息，询问：你是否知道这个IP地址的MAC地址是什么吗？)
+
+  * ARP广播，在不知道对方MAC地址的情况下，会通过ARP广播，如果发现是自身的IP地址，则就会把MAC地址返回回去。ARP广播会对所有的设备部发送广播。(ARP广播通俗点就是给所有设备发送一条信息，询问：你是否知道这个IP地址的MAC地址是什么吗？)
+
+* MAC地址：是有生产厂商设置的。当Mac地址是全F的，则说明是广播地址
+* IP地址：每一台主机都有一个IP地址。IP地址由两部分组成：网络标识(网络ID)+主机标识(主机ID)
+	* 同一网段的计算机，网络标识相同；
+	* 网络 ID = 子网掩码 & IP地址 
+
 #### 计算机连接方式
 * 网线直连：需要用交叉线直连；
 * 同轴电缆：半双工通信，容易冲突；
@@ -44,9 +51,28 @@ Serverlet
 	要想使IP地址1s中的设备与IP地址2s中的设备进行通信，则需要使用路由器。
 	IP地址1s的交换机 ———— 路由器 ———— IP地址2s的交换机
 	```
-	其次路由器也有多个对外接口，这个接口称为**网关**。每个网关与对应的广播域是属于同一网段。这样当路由器的网关接收到一个通信信息时，就能够知道发给哪一个网关的IP地址了。(网关也是有MAC地址的)
+	其次路由器也有多个对外接口，这个接口称为**网关**，网关有自己的IP地址和MAC地址。每个网关与对应的广播域是属于同一网段。这样当路由器的网关接收到一个通信信息时，就能够知道发给哪一个网关的IP地址了。(网关也是有MAC地址的)
 
 所以当代的技术就是：交换机+路由器。
+路由器中的WAN口连接外网，LAN口连接内网。家用无线路由器里内置了交换机。
+总结：
+	交换机连接的设备在同一个网段。同一个网段代表在同一广播域，所以任一设备发出的东西，同一网段（广播域）的所有设备都能够收到。 如果全球所有的设备都用交换机连接在一起，那么就会形成广播风暴——只要有任一设备发送信息，全球其他所有设备都能收到。所以我们通过路由器来隔离不同网段的设备。
 
-44
 
+### 互联网
+* ISP : 因特网服务提供商。比如：移动、电信、联通。
+* 局域网：局域网使用的网络技术叫以太网。
+* 上网方式：
+	* 电话线：使用调制解调器，将数字信号和模拟信号进行转换
+	* 光纤：使用光调制解调器，将数字信号与光信号进行转换 
+
+### 网络分层
+#### 物理层
+#### 数据链路层
+#### 网络层
+#### 传输层
+#### 应用层
+
+### TCP & UDP
+
+### HTTP
