--- a/读书笔记/iOS自学笔记/专题——网络基础.md
+++ b/读书笔记/iOS自学笔记/专题——网络基础.md
@@ -67,12 +67,241 @@ Serverlet
 	* 光纤：使用光调制解调器，将数字信号与光信号进行转换 
 
 ### 网络分层
+
+OSI  7层参考模型：应用层、表示层、会话层、运输层、网络层、数据链路层、物理层；
+TCP/IP 5层协议模型：
+* 应用层: 
+	处理的数据是：**报文、用户数据**；
+	常用协议是：FTP、HTTP、SMTP、DNS、DHCP等；
+* 运输层:
+	处理的数据是：段；
+	常用的协议是：TCP、UDP；
+* 网络层：
+	处理的数据是：包；
+	常用的协议是：IP、ARP、ICMP；
+* 数据链路层:
+	处理的数据是：帧；
+	常用的协议是：CSMA/CD、PPP；
+* 物理层:
+	处理的数据是：比特流；
+	常用的协议是：无；
+
 #### 物理层
+物理层定义了接口标准、线缆标准、传输速率、传输方式等；
+##### 信号
+* 数字信号：适合短距离传输，稳定性高；
+* 模拟信号：适合长距离传输，稳定性差；
+##### 数据通信模型
+* 局域网通信模型
+	PC ——数据信号/网线—— 集线器或交换机 ——数据信号/网线—— PC
+	注意：网线不能超过100米
+* 广域网通信模型
+	PC ——数据信号/网线—— 调制解调器 ———模拟信号/电话线——— 调制解调器 ——数据信号/网线—— PC
+	调制解调器就是对数字信号和模拟信号进行转换。
+##### 信道
+* 信道：
+	信息传输的信道。一条传输介质(比如网线)上可以有多条信道。(比如A到B，B到A就是两条信道)
+* 单工通信：
+	信号只能往一个方向传输。比如无线电广播，有线电视广播；
+* 半双工通信：
+	信号可以双向传输，但是同一时间只能往一个方向传输。比如对讲机；
+* 全双工通信：
+	信号可以同时双向传输。比如手机(打电话，听说同时进行)
+	
 #### 数据链路层
+* 链路：从一个节点到相邻节点的一段物理线路(有线或无线)，中间没有任何交换节点。
+* 数据链路：在一条链路上传输数据时，需要有对应的通信协议来控制数据的传输
+	* 不同类型的数据链路，所用的通信协议可能是不同的。
+		* 广播信道：CSMA/CD协议；(比如同轴电缆、集线器等组成的网络)
+		* 点对点信道：PPP协议(比如2个路由之间的通信)
+##### 数据链路层的3个基本问题
+* 封装成帧：
+	IP数据包(网络层数据包), 给其添加帧首部和帧尾部。
+	注意：每一种数据链路层协议都规定了所能够传输的帧的数据长度上限。(比如以太网的最大长度为1500个字节)。
+* 透明传输：
+	是指在传输过程中会进行一些转义(细节可以忽略)。
+* 差错检验：
+	数据链路层会**将IP数据和数据链路层首部计算出一个FCS数据放在帧尾部**。当传输到另一端的时候，接收端也会对IP数据包与数据链路层首部计算出一个值，然后将其与FCS进行比较来判断IP数据包是否有差错。
 #### 网络层
+* 网络层数据包（也叫IP数据包）由首部、数据2部分组成。这里的数据是由传输层传递下来的数据段，然后首部字段至少占用20个字节(大部分都是20字节)，最长60个字节
+##### 网络层包含的首部字段
+* 版本：指 IPv4 or IPv6，占4位；
+* 首部长度：表示首部实际长度，占4；
+* 区分服务：用来提高网络的服务质量，占8位。(区分服务如果有特殊字段，数据链路层可能会让其提前通过)；
+* 总长度：首部+实际数据的总长度；
+* 标识：当数据包过大时，就需要进行分片。这个标识就是用来表示哪些片是属于同一个数据包的，占16位；
+* 标志：占3位，第一位不使用，第二位表示是否允许分片（如果设置了不允许分片，但是长度又超过了1500，则就会报错发不出去）；第三位表示是否是最后一片（因为每一片到底时机不一样，所以并不能确定是否都到达了）；
+* 片偏移：分片数据的首字节相对于原始数据包中的字节偏移位置除以8，占13位；(标识表示是同一个数据包，片偏移就能表示当前分片是处于数据包的哪个位置，除以8就怕13位不够使用)。
+* 协议：存储使用到的协议；(比如从运输层传过来的，可能就有TCP或UDP。但是有的数据可能不是从运输层传过来的。像ICMP协议，直接就可以从网络层发送数据)
+* 首部校验和：用来差错检测，类似数据链路层的差错检测；
+* 生存时间：主要是可以用来查询经过哪些路由器。
+* 源IP：
+* 目标IP：
+##### 分片
+因为数据链路层的数据长度不能超过1500个字节。所以对于特别大的数据，就会将其进行分片。分片是在传输层进行的。
+* 每一片都有自己的网络层首部(IP首部)
+
 #### 传输层
+传输层有两个协议
+* TCP 传输控制协议
+* UDP 用户数据报协议
+
+##### TCP & UDP
+* 连接性：		
+   TCP 面向连接；
+   UDP 无连接；
+
+* 可靠性：
+   TCP 可靠传输、不丢包；
+   UDP 不可靠传输,尽最大努力交付、可能丢包；
+
+* 首部占用空间：
+   TCP 大；
+   UDP 小；
+
+* 传输速率：
+   TCP 慢；
+   UDP 快；
+
+* 资源消耗：
+   TCP 大；
+   UDP 小；
+
+* 应用场景：
+   TCP 浏览器、文件传输、邮件发送； 
+   UDP 音视频通话、直播；
+
+* 应用层协议：
+   TCP：HTTP、HTTPS、FTP、SMTP、DNS；
+   UDP：DNS
+
+##### UDP —— 用户数据报协议
+* UDP 是无连接的，减少了建立和释放连接的开销
+
+* UDP 尽最大努力交付，不保证可靠交付
+
+* 因为无需维护一些复杂的参数，所以首部就只需要8个字节。首部主要包括：**源端口号**、**目标端口号**、**UDP长度**（首部长度+数据长度）、**UDP检验和**（UDP会在计算检验和的时候在首部和数据之外添加一个伪首部，这个伪首部包含源IP地址、目标IP地址、协议、UDP长度。然后UDP会使用伪首部、首部、数据计算出一个检验和。最后检验和再放到首部里，而不会往网络层传递）。
+
+##### TCP —— 传输控制协议
+###### 首部：
+  TCP首部是由20个字节的固定长度和部分可变长度一起组成。首部长度在20~60直接。
+  * 源端口：**（重要）** 
+  * 目标端口 ：**（重要）** 
+  * 序号：**（重要）** TCP数据部分的编号(实际取的是数据部分第一个字节的编号)；
+  * 确认号：**（重要）** 表示的是期待下一次收到的TCP数据的序号；也表示确认收到前面的数据，所以叫做确认号
+  * 数据偏移：占4位。数据偏移的值 * 4 === 首部长度。(这里和UDP不一样，它这个长度没有包含数据长度。那这个数据长度怎么计算呢？首先网络层也含有首部字段，接收端可以根据网络层首部的总长度计算出传输层数据的段总长度，然后减去偏移量，就是传输层数据长度。其实UDP也可以这样计算出来)
+  * 保留：暂时全为0，应该是没有用上
+  * 标准位：**（重要）**
+  	* URG：紧急指针，为1表示当前报文有紧急数据，应尽快传送；
+  	* ACK：确认号，为1表示确认连接；
+  	* RST：重置，为1表示连接中出现差错，必须释放连接，然后重新建立连接；
+  	* SYN：为1 表示建立连接的请求；
+  	* FIN：为1 表示要求释放连接；
+  * 窗口：**（重要）** 用于告诉对方下一次运行发送的数据大小；
+  * 检验和：和UDP是一样的，检验和 == 伪首部 + 首部 + 数据。这个伪首部包含源IP地址、目标IP地址、协议、UDP长度。然后UDP会使用伪首部、首部、数据计算出一个检验和。最后检验和再放到首部里，而不会往网络层传递
+  * 紧急指针
+  * 可变选项
+  * 填充
+
+###### 建立连接
+* 三次握手：
+
+  客户端给服务器发送一个建立连接请求；SYN = 1， ACK = 0，seq = x；(seq 表示客户端初始序号)
+
+  服务器接收到建立连接请求后，会返回一个确认报文，并携带一个建立连接的请求：SYN = 1，ACK = 1，seq = y, ack = x + 1；(seq 表示服务器初始序号，确认号就是客户端序号 + 1)
+
+  客户端收到后会返回一个确认建立连接的请求；SYN = 0， ACK = 1，seq = x + 1， ack  = y + 1；
+
+	* 服务器一开始肯定是占用了某一个端口，在监听状态。
+	* 双方会交换一些信息。比如是否支持SACK、MSS(最大)、窗口缩放系数等
+	* 为什么要三次，两次不行吗？
+		假如客户端发送建立连接的请求报文发生了超时，客户端会启用超时重传策略，重新发送连接请求，Server端收到了会回复确认报文，那之后又收到了之前超时的请求连接，，服务器又会返回确认连接的报文。如果没有第三次握手，那么这样就会又建立一次连接，相当于建立了两次连接。而多了那次客户端确认报文的话，服务器发送第二次确认报文后，客户端不会返回第三次握手，那么后面那次连接就建立不起来。
+	* 如果第三次握手失败了，会发生什么？
+		第二次握手后，此时服务器的状态为等待确认状态。若等不到客户端发出的第三次握手，服务器就会重新发送SYN+ACK包(第二次握手)，如果多次重发SYN+ACK后都等不到客户端的确认，就会发送RST包，强制关闭连接。
+* 四次挥手：
+	
+  
+
+###### **可靠传输**：
+* 可靠传输使用的是ARQ**停止等待**协议。
+  发送一个数据包就停止发送，等待确认。
+    * eg1: 正常情况下，发送方每发送一个数据段，接收方收到后会返回一个确认报文，然后发送方再发送下一个报文。(无差错情况)
+    * eg2: 当发送方发送完数据包之后，**数据丢包了**，接收方没有收到数据段，那么发送方在**超时时间**到达时没有收到确认报文，则会**重新发送刚才的数据段**；(超时重传)
+    * eg3: 当发送方发送完数据段之后，如果接收方接收到数据了，但是**返回的确认报文丢失了**，那么发送方同样会在超时时间到达时重新发送数据, 接收方收到后会将重复的数据丢弃，再返回确认。(确认丢失)
+    * eg4: 当发送方发送完数据段之后，如果接收方接收到数据了，但是**返回的确认报文迟到了**，那么发送方同样会在超时时间到达时重新发送数据，但是隔了很久后迟到的确认报文又被发送方收到了，此时发送方就什么也不会做。(确认迟到)
+
+问题：这样的发送效率会非常低。因为每一次发送都得等待前面的数据确认收到后才能发送下一个数据包。
+
+* 连续ARQ**停止等待**协议 + 滑动窗口协议
+  所谓滑动窗口，就是发送端有一个发送窗口用于连续发送数据包，接收端有一个接收窗口用于接收数据包。当发送窗口中的数据包连续发送完成后，就会停止发送，等待确认。当接收窗口接收到所有数据包之后，就会返回一个确认报文，返回的确认报文包含确认序号(期望收到的下一个数据包的序号)。发送方接收到确认报文后，就会滑动当前窗口，接着发送下一组数据。另外发送方有一个发送缓存，接收方有一个接收缓存。
+  * eg: 发送端增加一个发送窗口。假设发送窗口里有4个连续的数据包，发送端在将4个连续的发送闭包发送完成之后，停止发送，等待确认。接收端在接收到最后一个数据包后，会返回一个确认报文。发送端收到确认后，就接着发送其他的数据段。
+
+	* 具体过程：
+		* 首先，建立TCP连接(3次握手)时，接收端会告诉发送端，当前接收窗口的大小，以便滑动窗口大小调整。
+		* 然后发送方开始将发送窗口里的数据段连续发送出去。发送完成后，停止发送，等待确认。
+		* 接收方接收到数据后，会返回一个确认报文，这个确认报文还附带一个确认序号。其次接收缓存会将已收到的连续数据传输给应用层，然后接收缓存会将已发送给应用层的数据删掉。
+		* 发送方接收到确认报文后，将窗口进行滑动，然后删掉发送缓存里已发送的数据，然后接着发送下一批数据包。
+		* 那如果发送数据段中出现了丢包的情况。假设序号为5、6、7、8，丢失了序号为7的包。那么接收方在接收完后，首先会将滑动窗口移动到7的位置。然后返回确认报文，确认报文里的确认号就是7。
+		* 发送端接收到确认报文后，就会将发送窗口滑动到7的位置，然后重新开始发送连续数据包。但是这里要注意一点，因为数据段8已结被接收到了，所以发送端不会再将数据段8再发送出去（这种技术叫做**SACK选择性确认**，就不会重复发送已结发送成功的数据段，只发送已丢失的数据段。而实现这个技术的关键就是根据首部字段的**可变选项**，它会包含已经接收的数据段编号和未接收到的数据段编号）。
+
+###### 流量控制：
+* 如果接收方的缓存区满了，发送方还在疯狂发送数据。
+
+  * 接收方只能把收到的数据段丢掉。这样就会造成网络资源浪费；
+
+* 也可能是网络太差了。所以需要告诉发送方一次性不要发送那么多数据包。 
+  所以就需要控制发送方的发送速率。流量控制就是让发送方的发送速率不要太快，让接收方来得及接收处理；
+  流量控制也是通过滑动窗口协议做的。滑动窗口的大小不是固定的，是动态调整的。它是通过确认报文首部的窗口字段来控制发送速率的。发送方的发送窗口不能超过接收方给出的窗口大小。
+  当发送方收到接收窗口的大小为0时，那么就会停止发送。以此同时，发送方会主动开启一个定时器，隔一段时间发送一个测试报文去询问接收方最新的窗口大小。如果测试报文接收到的确认信息窗口大小还是0，则会再次刷新定时器。
+
+  
+
+###### 拥塞控制：
+
+拥塞控制就是为了防止过多的数据注入到网络中，防止网络中的路由器或链路过载。
+发送方除了有一个发送窗口，还有一个**拥塞窗口**。如果网络比较拥塞时，那么拥塞窗口就会比较小。发送窗口除了跟接收端的接收窗口有关，也跟拥塞窗口有关。具体来说：
+**发送窗口大小 == min(拥塞窗口大小，接收窗口大小)**。
+
+具体步骤：
+
+* 慢开始 && 拥塞避免
+	* 慢开始
+		拥塞窗口慢慢变大，比如显示一个数据段大小，后面就2个数据段大小，然后4、16等**成倍增长**，一直到达到慢开始**阈值**。
+	* 拥塞避免
+		就是在慢开始到达阈值后，就开始以**线性方式增长**，放慢增长速度，避免过早出现拥塞。只要出现网络拥塞，把阈值减半，与此同时，再开始执行慢开始。
+* 快重传 && 快恢复
+	* 快重传
+		接收方在收到一个失序的数据段后，就立即发出重复确认。比如接收方接收到了数据段1、数据段2、数据段4，那么它就发现数据段3没有接收到，所以就会连续发送3个确认收到数据段2（确认报文里就有想要收到数据段3的确认号），发送方收到重复确认后，就知道数据段3没有发送成功，所以就会立马再次发送数据段3，就不会等待超时重传了。
+	* 快恢复
+		快恢复就是在达到拥塞后，阈值会降低，降低后，就不再执行慢开始，而是继续执行新的线性增长（类似拥塞避免的增长方式）。
+
+
+
+
+
+
 #### 应用层
 
-### TCP & UDP
+##### HTTP
 
-### HTTP
+#### 其他
+##### 端口
+* 客户端的端口是临时开启的随机端口。一旦请求完成就会关掉。
+* 服务器端口是固定不变的，常见的服务端默认端口：
+	* HTTP	默认端口号：TCP + 80；
+	* HTTPS 默认端口号：TCP + 443
+	* FTP  	默认端口：TCP + 21
+	* MySQL 默认端口：TCP + 3306
+	* DNS	默认端口：UDP\TCP + 53
+	* SMTP	默认端口：TCP + 25
+	* POP3	默认端口：TCP + 110
+* 防火墙可以通过设置开启、关闭某些端口来提高安全性。
+
+##### TCP 疑问
+* 若有一个包重传了N次还是失败，会一直持续重传到成功为止吗？
+	这个取决于系统设置。比如有些系统，重传5次未成功就会发送reset报文（RST 为1），断开连接。
+* 如果接收窗口最多接收4个数据包，但是发送方只发了2个数据报，那么接收方如何确定后面还有没有2个包。
+	接收方接收到那个2个数据包后，会等待一定的时间后，如果没有收到其他的包，就会返回确认报文。
+* 为什么选择在传输层进行分段，而不是在网络层再分片？
+	因为可靠传输是在传输层进行控制的。如果没有分片，一旦出现数据丢失，那么就得将整个数据重传。
+* 
