复习4次挥手相关

--- a/读书笔记/iOS自学笔记/专题——网络基础.md
+++ b/读书笔记/iOS自学笔记/专题——网络基础.md
@@ -212,15 +212,32 @@ TCP/IP 5层协议模型：
 
   客户端收到后会返回一个确认建立连接的请求；SYN = 0， ACK = 1，seq = x + 1， ack  = y + 1；
 
-	* 服务器一开始肯定是占用了某一个端口，在监听状态。
-	* 双方会交换一些信息。比如是否支持SACK、MSS(最大)、窗口缩放系数等
-	* 为什么要三次，两次不行吗？
-		假如客户端发送建立连接的请求报文发生了超时，客户端会启用超时重传策略，重新发送连接请求，Server端收到了会回复确认报文，那之后又收到了之前超时的请求连接，，服务器又会返回确认连接的报文。如果没有第三次握手，那么这样就会又建立一次连接，相当于建立了两次连接。而多了那次客户端确认报文的话，服务器发送第二次确认报文后，客户端不会返回第三次握手，那么后面那次连接就建立不起来。
-	* 如果第三次握手失败了，会发生什么？
-		第二次握手后，此时服务器的状态为等待确认状态。若等不到客户端发出的第三次握手，服务器就会重新发送SYN+ACK包(第二次握手)，如果多次重发SYN+ACK后都等不到客户端的确认，就会发送RST包，强制关闭连接。
+  * 服务器一开始肯定是占用了某一个端口，在监听状态。
+  * 双方会交换一些信息。比如是否支持SACK、MSS(最大)、窗口缩放系数等
+  * 为什么要三次，两次不行吗？
+  	假如客户端发送建立连接的请求报文发生了超时，客户端会启用超时重传策略，重新发送连接请求，Server端收到了会回复确认报文，那之后又收到了之前超时的请求连接，，服务器又会返回确认连接的报文。如果没有第三次握手，那么这样就会又建立一次连接，相当于建立了两次连接。而多了那次客户端确认报文的话，服务器发送第二次确认报文后，客户端不会返回第三次握手，那么后面那次连接就建立不起来。
+  * 如果第三次握手失败了，会发生什么？
+  	第二次握手后，此时服务器的状态为等待确认状态。若等不到客户端发出的第三次握手，服务器就会重新发送SYN+ACK包(第二次握手)，如果多次重发SYN+ACK后都等不到客户端的确认，就会发送RST包，强制关闭连接。
+
 * 四次挥手：
-	
-  
+
+  三次握手建立连接之后，客户端和服务器就可以发送和接收数据了。数据收发完毕之后，就会断开连接。
+
+  1：首先客户端发送一个FIN关闭连接的报文，
+
+  2：服务器接收到后，就返回一个ACK的确认报文。
+
+  这样客户端往服务器的方向就关闭了。
+
+  因为TCP是全双工连接，一旦建立连接。客户端可以往服务器发送数据，服务器也可以往客户端发送数据。所以关闭就得双方向都关闭。
+
+  3：服务器也得发送一个FIN的关闭连接的报文，
+
+  4：客户端接收到后，就会返回一个ACK确认报文。
+
+  这样服务器往客户端的方向才能关闭。
+
+  * 有时候我们也会看到只有3次挥手的情况。其实就是第2次和第3次挥手合并了。出现这种情况的前提就是当服务器收到FIN时，发现自身也没有数据要发给客户端了。这个报文既包含第2次的ACK，也包含第3次的FIN报文。
 
 ###### **可靠传输**：
 * 可靠传输使用的是ARQ**停止等待**协议。
