复习DNS、DHCP、HTTP

--- a/读书笔记/iOS自学笔记/专题——网络基础.md
+++ b/读书笔记/iOS自学笔记/专题——网络基础.md
@@ -292,26 +292,136 @@ TCP/IP 5层协议模型：
 	* 快恢复
 		快恢复就是在达到拥塞后，阈值会降低，降低后，就不再执行慢开始，而是继续执行新的线性增长（类似拥塞避免的增长方式）。
 
-
-
-
-
-
 #### 应用层
+
+##### DNS
+
+由于IP地址不方便记忆。所以就使用域名来对应IP地址。不过在真实的网络请求过程中，肯定还是直接使用IP地址，因为要在路由器中进行传输，肯定得知道目前IP地址。
+
+DNS就是将域名解析成对应的IP地址。DNS是可以缓存的（可以使用命令行查看、清空缓存的DNS）。
+
+* 具体过程
+
+  客户端想要连接某台服务器的时候，比如百度，是先拿到百度域名www.baidu.com ，然后往DNS服务器发送一个数据包（数据包包含域名信息），然后DNS服务器返回一个数据包（数据包包含IP信息）。客户端拿到IP地址之后，就可以进行正常的网络请求了。
+
+  其实每一级域名都有对应的DNS服务器。比如根域名服务器、顶级域名服务器、二级域名服务器等。所有DNS服务器都记录了根DNS服务器的IP地址，上级DNS服务器都记录了下一级DNS服务器的IP地址。（全球一个23台顶级的根DNS服务器）
+
+  
+
+##### DHCP
+
+* IP地址可以分为静态IP和动态IP地址。
+
+  比如台式电脑可以使用静态地址，服务器也可以使用静态IP地址。
+
+  动态IP地址则就是从DHCP服务器获取的，比如移动设备、无线设备等。
+
+* DHCP协议使用的是UDP协议，客户端使用68端口，服务器是67端口。
+
+* 当设备从DHCP服务器请求IP地址时，DHCP会从IP地址池中，挑选一个IP地址“出租”给客户端一段时间，时间到期就回收它们。
+
+* 具体过程
+
+  * 查找服务器
+
+    客户端 发广播包（源IP：0.0.0.0，目标IP：255.255.255.255，目标MAC：FF.FF.FF.FF）
+
+  * 提供租约
+
+    服务器 返回可以租用的IP地址，以及租用期限、子网掩码、网关、DNS等信息。
+
+  * 选择IP地址
+
+    客户端 选择一个IP地址，发送广播包进行回应
+
+  * 确认
+
+    被选中的服务器发送ACK数据包给客户端
 
 ##### HTTP
 
+HTTP 超文本传输协议。（因为最初的HTTP协议就是为了发布和接收HTML页面，HTML是超文本标记语言，所以HTTP就被命名为超文本传输协议，不过到了现在，HTTP已应用特别广泛，不在仅限于HTML了）
+
+* 历史版本
+  * （1991）HTTP / 0.9 :  只支持GET请求获取文本数据，且不支持请求头、响应头等。
+  * （1996）HTTP / 1.0 ：支持POST、HEAD等请求方法，支持请求头、响应头等，支持更多数据类型；浏览器的每次请求都需要与服务器建立一个TCP连接，请求处理完成后立即断开TCP连接。
+  * （1997）HTTP / 1.1：支持PUT、DELETE等请求方法；采用持久连接（connection：keep-alive），多个请求可以共用一个TCP连接；
+  * （2015）HTTP / 2.0：
+
+* HTTP报文
+
+  * 请求报文
+
+    * 请求行：
+
+      方法        URL       HTTP版本
+
+    * 请求头：
+
+        HOST：xxx:8080
+
+        Connection：keep-alive
+
+        Cache-Control：no-cache
+
+        User-Agent：
+
+        Accept：
+
+        Accept-Encoding：
+
+        Accept-Language：
+
+        Cookie：
+
+        
+
+    * 请求体（一般post请求的参数放在请求体，get请求参数使用？&拼在URL后面，而且URL的长度有一定限制）：
+
+        参数
+
+  * 响应
+
+    * 状态行：
+
+      HTTP版本	状态码	短语	
+
+    * 首部行：
+
+      ContentLength：
+
+      Connection：keep-alive
+
+      
+
+    * 实体主体：
+
+
+
+
+
+
+
+
+
 #### 其他
+
+##### 网卡
+
+网卡在数据链路层；
+
+网卡影响处理数据的速度
+
 ##### 端口
 * 客户端的端口是临时开启的随机端口。一旦请求完成就会关掉。
 * 服务器端口是固定不变的，常见的服务端默认端口：
-	* HTTP	默认端口号：TCP + 80；
-	* HTTPS 默认端口号：TCP + 443
-	* FTP  	默认端口：TCP + 21
-	* MySQL 默认端口：TCP + 3306
-	* DNS	默认端口：UDP\TCP + 53
-	* SMTP	默认端口：TCP + 25
-	* POP3	默认端口：TCP + 110
+  * HTTP	默认端口号：TCP + 80；
+  * HTTPS    默认端口号：TCP + 443
+  * FTP  	默认端口：TCP + 21
+  * MySQL   默认端口：TCP + 3306
+  * DNS	默认端口：UDP\TCP + 53
+  * SMTP	默认端口：TCP + 25
+  * POP3	默认端口：TCP + 110
 * 防火墙可以通过设置开启、关闭某些端口来提高安全性。
 
 ##### TCP 疑问
@@ -322,3 +432,14 @@ TCP/IP 5层协议模型：
 * 为什么选择在传输层进行分段，而不是在网络层再分片？
 	因为可靠传输是在传输层进行控制的。如果没有分片，一旦出现数据丢失，那么就得将整个数据重传。
 * 
+
+##### 怎么区分长连接和短链接？
+
+* 通常来说连接建立成功后，只进行了一次数据交互就断开连接的连接就是短链接；如果建立连接后，会持续进行多次数据交互之后才释放的连接就是长连接。
+
+
+
+##### 多个客户端如何与服务端进行连接
+
+每个客户端跟服务器之间的连接都是通过socket。每个客户端开始与服务器进行连接的时候都会生成一个socket对象。然后服务器有一个ServerSocket一直处于监听状态，一旦监听到客户端的请求，就会通过ServerSocket生成一个对应的socket。也就是说，有多少个客户端，服务器也会对应生成多少个socket。
+
