--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -231,7 +231,7 @@ A *a = [[A alloc]init];
   * 1、class_rw_t里的二维数组类型有protocols、properties、methods。在runtime的时候，class_data_bits_t**会先将ro里的方法、属性、协议拷贝到rw对应数组中去**，然后再添加category里的方法、属性、协议。也就是说rw中的二维数组不止分类添加的，也包括类原类的方法、属性、协议。其次category添加对应成员时会添加到二维数组的前面，所以方法查找时会先查找category里的方法，再查找原理里的方法。而rw里没有成员变量，成员变量只存放在ro里，而class_ro_t是指只读的相关数据，也就是说已编译好的对象是无法在通过分类添加成员变量的（其实在编译期间类的内存大小已经确定，也不允许轻易更改内存）。在class_rw_t的方法列表中查找时，对于已排到的使用二分法查找，对于没有排序的直接遍历查找。
 
   * 2、super_class 指针的指向代表了方法查找的过程。也就是说对于实例方法，会沿着类对象的方法列表（此处先省略缓存查找等细节）进行查找，找不到就查找父类的方法列表，最后找的NSObject。而类方法的查找是在元类的方法列表中进行查找，以此往上查找，找的根元类的时候，如果根元类也没有实现，而由于根元类的superClass指针指向NSObject，所以又会查找NSObject对应的实例方法。所以如果一个类没有实现对应的类方法，但是**NSObject**实现了相同名称的实例方法，那么调用类方法时，则最终会调用到NSObject的同名实例方法。（注意，这里的实例方法必须是NSObject实现的。自身类没有实现类方法，实现了同名的实例方法，也是会崩溃的）
-  	* super : super关键字**调用方法**时，最终也会被编译成**objc_msgSendSuper**方法，这个方法第一个参数传入的是一个**objc_super的结构体**，第二个参数是SEL（比如下面例子里的@selector(class)）。**objc_super**包含一个receiver（消息接收者）和一个super_class（消息接收者的父类）指针，receiver对应的就是当前类的self。所以**使用super关键字调用方法，消息的接收者仍然是子类对象，只是方法实现是从内部的super_class开始搜索方法实现（从父类开始）**。另外，**class函数返回的其实就是方法调用者**，而无论是使用self还是super调用，最终的消息接收者都是子类对象，所以调用class方法，最后都返回当前子类的类名。
+    * super : super关键字**调用方法**时，最终也会被编译成**objc_msgSendSuper**方法，这个方法第一个参数传入的是一个**objc_super的结构体**，第二个参数是SEL（比如下面例子里的@selector(class)）。**objc_super**包含一个receiver（消息接收者）和一个super_class（消息接收者的父类）指针，receiver对应的就是当前类的self。objc_msgSendSuper的工作原理应该是这样的: 从objc_super结构体指向的superClass父类的方法列表开始查找selector，找到后以objc->receiver去调用父类的这个selector。注意，最后的调用者是objc->receiver，而不是super_class！所以**使用super关键字调用方法，消息的接收者仍然是子类对象，只是方法实现是从内部的super_class开始搜索方法实现（从父类开始）**。另外，**class函数返回的其实就是方法调用者**，而无论是使用self还是super调用，最终的消息接收者都是子类对象，所以调用class方法，最后都返回当前子类的类名。
   ```
   @interface Person
   @end
@@ -364,7 +364,7 @@ void myMethod(id self, SEL _cmd) {
   }
   ```
 
-  
+[runtime入院系列](https://halfrost.com/objc_runtime_isa_class/)
 
 ### Runloop
 RunLoop是通过系统内部维护的事件循环来对事件和消息进行管理的对象。事件循环可以有效地对消息和事件进行管理：当有消息需要处理时，会将进程从内核态到用户态进行切换，同时唤醒当前线程处理消息；当没有消息需要处理时，会休眠当前线程，将进程从用户态到内核态进行切换，以避免资源占用。所以runloop可以保证进程不退出，可以处理和监听事件，可以定时渲染UI，可以调节CPU的工作。
