优化笔记细节

--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -215,9 +215,9 @@ A *a = [[A alloc]init];
 
   * 类对象的super_class指针指向父类对象，元类对象的super_class指针指向父类的元类，根元类的super_class指针指向NSObject，NSObject的super_class指针为nil；
 
-  * cache_t **使用散列表**来缓存曾经调用过的方法，可以提高方法查找速度。是**计算机局部性原理**的应用；runtime通过key进行hash算法定位到对应的bucket_t，然后获取IMP。
+  * cache_t **使用散列表**来缓存曾经调用过的方法，可以提高方法查找速度。是**计算机局部性原理**的应用；runtime通过key进行hash算法定位到对应的bucket_t，然后获取IMP。**cache_t也是可增量扩展的，当缓存中的内容大于容量的3/4就会扩充缓存，使缓存的大小翻倍**。
 
-  * method_t中，SEL是函数名（需要注意的是：不同类中相同名字的方法，所对应的方法选择器是相同的）；const char *是一个满足typecoding标准的字符串。
+  * method_t中，SEL是函数名（需要注意的是：不同类中相同名字的方法，所对应的方法选择器是相同的，由于OC的这个特性，所以OC不支持函数重载）；const char *是一个满足typecoding标准的字符串。
 
     ```
     -(int)test:(int)a b:(float)b { return 0; }
@@ -231,7 +231,7 @@ A *a = [[A alloc]init];
   * 1、class_rw_t里的二维数组类型有protocols、properties、methods。在runtime的时候，class_data_bits_t**会先将ro里的方法、属性、协议拷贝到rw对应数组中去**，然后再添加category里的方法、属性、协议。也就是说rw中的二维数组不止分类添加的，也包括类原类的方法、属性、协议。其次category添加对应成员时会添加到二维数组的前面，所以方法查找时会先查找category里的方法，再查找原理里的方法。而rw里没有成员变量，成员变量只存放在ro里，而class_ro_t是指只读的相关数据，也就是说已编译好的对象是无法在通过分类添加成员变量的（其实在编译期间类的内存大小已经确定，也不允许轻易更改内存）。在class_rw_t的方法列表中查找时，对于已排到的使用二分法查找，对于没有排序的直接遍历查找。
 
   * 2、super_class 指针的指向代表了方法查找的过程。也就是说对于实例方法，会沿着类对象的方法列表（此处先省略缓存查找等细节）进行查找，找不到就查找父类的方法列表，最后找的NSObject。而类方法的查找是在元类的方法列表中进行查找，以此往上查找，找的根元类的时候，如果根元类也没有实现，而由于根元类的superClass指针指向NSObject，所以又会查找NSObject对应的实例方法。所以如果一个类没有实现对应的类方法，但是**NSObject**实现了相同名称的实例方法，那么调用类方法时，则最终会调用到NSObject的同名实例方法。（注意，这里的实例方法必须是NSObject实现的。自身类没有实现类方法，实现了同名的实例方法，也是会崩溃的）
-    * super : super关键字**调用方法**时，最终也会被编译成**objc_msgSendSuper**方法，这个方法第一个参数传入的是一个**objc_super的结构体**，第二个参数是SEL（比如下面例子里的@selector(class)）。**objc_super**包含一个receiver（消息接收者）和一个super_class（消息接收者的父类）指针，receiver对应的就是当前类的self。objc_msgSendSuper的工作原理应该是这样的: 从objc_super结构体指向的superClass父类的方法列表开始查找selector，找到后以objc->receiver去调用父类的这个selector。注意，最后的调用者是objc->receiver，而不是super_class！所以**使用super关键字调用方法，消息的接收者仍然是子类对象，只是方法实现是从内部的super_class开始搜索方法实现（从父类开始）**。另外，**class函数返回的其实就是方法调用者**，而无论是使用self还是super调用，最终的消息接收者都是子类对象，所以调用class方法，最后都返回当前子类的类名。
+    * super : super关键字**调用方法**时，最终也会被编译成**objc_msgSendSuper**方法，这个方法第一个参数传入的是一个**objc_super的结构体**，第二个参数是SEL（比如下面例子里的@selector(class)）。**objc_super**包含一个receiver（消息接收者）和一个super_class（消息接收者的父类）指针，receiver对应的就是当前类的self。objc_msgSendSuper的工作原理应该是这样的: 从objc_super结构体指向的superClass父类的方法列表开始查找selector，**找到后以objc->receiver去调用父类的这个selector**。注意，最后的调用者是objc->receiver，而不是super_class！所以**使用super关键字调用方法，消息的接收者仍然是子类对象，只是方法实现是从内部的super_class开始搜索方法实现（从父类开始）**。另外，**class函数返回的其实就是方法调用者**，而无论是使用self还是super调用，最终的消息接收者都是子类对象，所以调用class方法，最后都返回当前子类的类名。
   ```
   @interface Person
   @end
@@ -245,7 +245,13 @@ A *a = [[A alloc]init];
       -(Class)class {
           return object_getClass(self);
       }
-      根据这个方法的内部实现，我们可以知道，class返回的实际上是self的类型，也就是消息接收者的类型。
+      object_getClass实际上获取的是isa
+      Class object_getClass(id obj)
+  	{
+      	if (obj) return obj->getIsa();
+      	else return Nil;
+  	}
+      根据方法的内部实现，我们可以知道，class返回的实际上是当前对象所属的类。
       */ 
   
   	//会编译成：objc_msgSend(self， @selector(class))
@@ -265,13 +271,13 @@ A *a = [[A alloc]init];
 
   oc中所有的方法调用都会被转化成函数objc_msgSend。该方法的第一个参数默认是receiver（消息接收者），默认第二个参数是SEL（函数名）。objc_msgSend函数实际是使用汇编语言写的，通常调用频次非常高的函数会被转化成汇编，提高执行效率。
 
-  objc_msgSend方法内部先会判断接收者receiver是否为nil，如果为nil，则直接return退出函数；接着通过receiver的isa指针，获取到当前对象对应的class，然后**在汇编的层级对class的缓存列表进行哈希查找**（哈希查找的过程是用过SEL&mask找到索引，然后找到对应的IMP），如果查找到了就直接返回；如果没有查找到，则会进入C语言的相关函数进行查找过程，**C语言中又会先进行缓存的哈希查找**（为什么这里又要第二次查找缓存？可能是担心在查找的过程中，缓存里有添加进新的方法），如果找到，则直接返回IMP；如果没有找到，则进入到class_data_bits_t的方法列表中（这里既包含类的原始方法又包含分类添加的方法）进行查找，这个查找过程是**先对已排序好的方法列表进行二分查找，然后对未排序的方法进行for迭代查找**；如果没有找到，则通过receiver的superclass获取到父类，然后在父类里进行查找（查找的过程也是先进行缓存的哈希查找，再对方法列表进行二分查找和迭代查找），**如果找到了，则会将查找到的方法存入到当前receiver的缓存列表中（注意：父类方法也存到当前类的缓存列表中）**，如果没有找到，则继续往父类里进行查找，如此往复，一直到找到NSObject也没有找到，则会进入动态消息解析的过程。
+  objc_msgSend方法内部先会判断接收者receiver是否为nil，还会判断selector是否要忽略，如果为nil或需要忽略selector。如果有target为nil，则会判断是否有相应的nil处理函数，有就跳转到对应的处理函数中。如果没有处理nil的函数，就自动清理现场并回收（这也是为什么可以给nil发送消息的原因）。接着通过receiver的isa指针，获取到当前对象对应的class，然后**在汇编的层级对class的缓存列表进行哈希查找**（哈希查找的过程是用过SEL&mask找到索引，然后找到对应的IMP），如果查找到了就直接返回；如果没有查找到，则会进入C语言的相关函数进行查找过程，**C语言中又会先进行缓存的哈希查找**（为什么这里又要第二次查找缓存？可能是担心在查找的过程中，缓存里有添加进新的方法），如果找到，则直接返回IMP；如果没有找到，则进入到class_data_bits_t的方法列表中（这里既包含类的原始方法又包含分类添加的方法）进行查找，这个查找过程是**先对已排序好的方法列表进行二分查找，然后对未排序的方法进行for迭代查找**（这里要说一下，有一个search_method_list函数，它内部会去判断methodList是否有序就会使用二分搜索，如果无序就傻瓜式迭代）；如果没有找到，则通过receiver的superclass获取到父类，然后在父类里进行查找（查找的过程也是先进行缓存的哈希查找，再对方法列表进行二分查找和迭代查找），**如果父类中找到了，则会将查找到的方法存入到当前调用的类的缓存列表中（注意：父类方法也存到当前类的缓存列表中）**，如果没有找到，则继续往父类里进行查找，如此往复，一直到找到NSObject也没有找到，则会进入动态消息解析的过程。
 
   * 这里的汇编里的查找过程可以成为高速查找，C语言里的查找过程可以成为缓慢查找；
 
 * 动态消息解析及消息转发：
   如果方法查找没有找到，则iOS提供了动态方法解析和消息转发流程：
-  动态方法解析：resolveInstanceMethod: (类方法是resolveClassMethod)。可以在这个方法里动态添加方法实现（使用class_addMethod），添加完成后，**会重新走消息发送流程**。其次这里添加的方法最终也是添加到RW的方法列表里；
+  动态方法解析：resolveInstanceMethod: (类方法是resolveClassMethod)。可以在这个方法里动态添加方法实现（使用class_addMethod）（**所以这里底层有个很重要的细节，在调用_class_resolveMethod的时候，会开启读锁，使得在动态添加方法时，不进行读的操作，使操作更安全**），添加完成后，**会重新走消息查找流程**。其次这里添加的方法最终也是添加到RW的方法列表里；
   如果动态方法解析没有添加方法，则开始走消息转发流程（顾名思义，就是将消息转发给别人）：先查看forwardingTargetForSelector：如果返回不为nil则说明转发给了其他id对象，则会开始走那个id对象的消息转发流程（其实就是内部调用了objc_msgSend）；如果返回nil，则会调用methodSignatureForSelector:方法，这个方法返回一个**方法签名**（**方法签名其实就是包装返回值类型、参数类型。其实就是一个动态开辟函数空间的类** ），则会调用forwardingInvocation方法执行（forwardingInvocation的参数NSInvocation，NSInvocation封装了一个函数调用，其中包括：方法调用者、方法名、方法参数。 在这个函数里可以将方法调用者赋值给其他对象，这样也类似转发给了其他方法调用者。）。否则调用doseNotRecognaziedSelector方法报出异常。所以我们可以使用methodSignaltureForSelelctor:和forwardingInvocation：来处理未找到方法导致崩溃的问题，可以对消息进行拦截，然后记录日志。
 
 	* 面试题：方法签名的作用是什么？
@@ -336,6 +342,7 @@ void myMethod(id self, SEL _cmd) {
   -(BOOL)isMembberOfClass:(Class)cls {
       return [self class] == cls;
   }
+  // 一直循环查看class及super的class，判断是否有相等
   -(BOOL)isKindOfClass:(Class)cls {
       for(Class tcls = [self class], tcls = tcls->superClass) {
           if (tls == cls) return YES;
@@ -346,12 +353,15 @@ void myMethod(id self, SEL _cmd) {
 
   从底层源码可以得出：isKindOfClass是判断消息接收者是否是参数类本身或者参数类子类；isMemberOfClass则是只判断消息接收者是否是参数类本身。
 
+  
+
   ```
   @interface Person : NSObject
   @end
   
   -(void)main {
-  //这几个是测试类对象，所以右侧肯定得是元类，而所有元类的根元类是NSObject。元类获取API：objc_getClass([xxx class])。
+  //这几个左侧是id类型，也就是实例对象，所以class是类对象。所以右侧是类对象，所以class是元类。isKindOfClass会不断循环往父类查看是否是和当前class相等，isMemberOfClass则直接判断是否和当前class相等。
+  // 另外，可以看出class是可以直接强转成id类型的。
       BOOL res1 = [(id)[NSObject class] isKindOfClass:[NSObject class]]; //YES
       BOOL res2 = [(id)[NSObject class] isMemberOfClass:[NSObject class]]; //NO
       BOOL res3 = [(id)[Test2 class] isKindOfClass:[Test2 class]]; //NO
